<resources>
    <string name="app_name">timeSheetApp</string>
    <string name="home">Home</string>
    <string name="editPage">Edit page</string>
    <string name="settings">Settings</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="current_activity">Tap current activity</string>
    <string name="current_subactivities">Tap current Subactivity:</string>
    <string name="myName">My name:</string>
    <string name="MyGoogleCalendar">My google calendar</string>
    <string name="save">Save</string>
    <string name="nothing">Nothing</string>
    <string name="relaxing">Relaxing</string>
    <string name="sleeping">Sleeping</string>
    <string name="working">Working</string>
    <string name="exercising">Exercising</string>
    <string name="reading">Reading</string>
    <string name="travelling">Travelling</string>
    <string name="eating">Eating</string>
    <string name="washing">Washing</string>
    <string name="newButton">+ NEW</string>
    <string name="clearLog">Clear log</string>
    <string name="undo">Undo</string>
    <string name="timeSinceLastTap">Time since last tap: </string>
    <string name="activityLog">Activity Log</string>
    <string name="date">Date</string>
    <string name="note">Note:</string>
    <string name="enterNote">Enter note (255 characters max)</string>
    <string name="startTime">start time</string>
    <string name="activity">Activity</string>
    <string name="Subactivity">Subactivity</string>
    <string name="emailReportTo">Email report to:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="reportStartDate">Report start \ndate</string>
    <string name="reportEndDate">Report end \ndate</string>
    <string name="email">Email</string>
    <string name="changeActivity">Change activity</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dialogLogActivityTitle">Your choice</string>
    <string name="dialogNewButton">Input name for new acivity</string>
    <string name="dialogNewButtonForSubactivities">Input name for new subacivity</string>
    <string name="saved_myName">myName</string>
    <string name="saved_Calendar_use">myCalendar</string>
    <string name="dialogCleanLog">ARE YOU SURE YOU WANT TO CLEAR THE LOG?</string>
    <string name="deleteActivity">Confirm Delete button ?</string>
    <string name="newActivity">New Activity</string>
    <string name="newSubactivity">Sub</string>
    <string name="MakeChoice">Make your choice</string>
    <string name="notes">Notes</string>
    <string name="activities">Activities</string>
    <string name="subactivities">Subactivities</string>
    <string name="currentActivity">Current activity:</string>
    <string name="log_data">LOG DATA</string>
    <string name="stopwatch_log">Stopwatch log</string>
    <string name="google_calendar">Google calendar</string>
    <string name="phone_log">Phone log</string>
    <string name="gps_log">GPS log</string>
    <string name="start_tine">Start Time</string>
    <string name="finish_time">Finish Time</string>
    <string name="event">Event</string>
    <string name="contact">Contact</string>
    <string name="Longitude">Longitude</string>
    <string name="Latitude">Latitude</string>
    <string-array name="days">
        <item >Sunday</item>
        <item >Monday</item>
        <item >Tuesday</item>
        <item >Wednesday</item>
        <item >Thursday</item>
        <item >Friday</item>
        <item >Saturday</item>
     </string-array>
</resources>
