<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorSleeping"
    >

    <TextView
        android:id="@+id/tvTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentActivity"
        android:textColor="@color/colorTextSubactivity"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:text="TravellTMP"
        app:layout_constraintLeft_toRightOf="@+id/tvTimes"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textColor="@color/colorTextSubactivity"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tvTimes" />

    <EditText
        android:id="@+id/etNote"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:maxLength="255"
        android:background="@color/colorText"
        android:hint="@string/enterNote"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNote" />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorButton"
        android:text="@string/save"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNote" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:inputType="textMultiLine"
        android:text="@string/cancel"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNote" />
</android.support.constraint.ConstraintLayout>