<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="30sp"
    android:layout_marginLeft="20dp"
    android:textColor="@color/colorText"
    android:text="@string/settings"
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/myName"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:background="@color/colorText"
            android:layout_width="160dp"
            android:layout_marginLeft="10dp"
            android:layout_height="40dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MyGoogleCalendar"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            />
        <EditText
            android:background="@color/colorText"
            android:layout_width="260dp"
            android:layout_marginLeft="10dp"
            android:layout_height="40dp" />
            />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/save"
        android:layout_marginTop="70dp"

        android:background="@color/colorButton"
        android:layout_marginLeft="15dp"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        />
</LinearLayout>
    </LinearLayout>
</LinearLayout>