<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorSleeping"
    >

    <TextView
        android:id="@+id/tvCurAct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentActivity"
        android:textColor="@color/colorTextSubactivity"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCurAct2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:text="TravellTMP"
        app:layout_constraintLeft_toRightOf="@+id/tvCurAct1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCurAct3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_subactivities"

        android:textColor="@color/colorTextSubactivity"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurAct1" />

    <GridView
        android:id="@+id/gVSub"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:verticalSpacing="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurAct3" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:text="@string/cancel"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gVSub" />
</android.support.constraint.ConstraintLayout>